tests/baselines/reference/computedPropertyNames32_ES5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
computedPropertyNames32_ES5.ts(6,10): error TS2467: A computed property name cannot reference a type parameter from its containing type.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== computedPropertyNames32_ES5.ts (1 errors) ====
    function foo<T>() { return '' }
    class C<T> {
        bar() {
            return 0;
        }
        [foo<T>()]() { }
             ~
!!! error TS2467: A computed property name cannot reference a type parameter from its containing type.
    }